# wikiscrape

./: Cargo.toml  README.md  res.json  res2.json
src/: main.rs
